 @startuml
    class Bus {
    +name: str
    + v: float
    + set_bus_v(bus_v: float): void
    }
    class Resistor {
    +name: str
    +bus1: str
    +bus2: str
    +r: float
    +g: float
    +calc_g()
    }

    class VSource{
    +name: str
    +bus1: str
    +v: float
    }

    class Load{
    +name: str
    +bus1:str
    +p: float
    +v: float
    +r: float
    +g: float
    +calc_g()
    }

    class Circuit{
    +name: str
    +buses: dict[str, Bus]
    +resistors: list[Resistor]
    +loads: dict[str, Loads]
    +vsource: Vsource
    +add_bus(bus)
    +add_resistor_element(name: str, bus1: str, bus: str, r:float)
    +add_load_element(name: str, p:float, v: float)
    +set_i(i: float)
    +print_nodal_voltage()
    +print_circuit_current()
    }

    class Solution{
    +circuit: Circuit
    do_power_flow()
    }


Solution "1" o-- "1" Circuit : contains
Circuit "1" *-- "many" Bus : contains
Circuit "1" *-- "many" Resistor : contains
Circuit "1" *-- "many" Load : contains
Circuit "1" *-- "many" VSource : contains


    @enduml